--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -1,4 +1,4 @@
-name: Build Multi-Platform
+name: Build Mac and Windows
 
 on:
   push:
@@ -11,7 +11,7 @@ jobs:
   build:
     strategy:
       matrix:
-        os: [ ubuntu-latest, windows-latest, macos-latest ]
+        os: [ windows-latest, macos-latest ]
     runs-on: ${{ matrix.os }}
 
     steps:
@@ -29,12 +29,6 @@ jobs:
         node-version: '20'
         cache: 'npm'
         cache-dependency-path: frontend/package-lock.json
-
-    - name: Install Linux dependencies
-      if: matrix.os == 'ubuntu-latest'
-      run: |
-        sudo apt-get update
-        sudo apt-get install -y libwebkit2gtk-4.0-dev libgtk-3-dev libgio-2.0-dev libglib2.0-dev libgdk-pixbuf2.0-dev libcairo2-dev libpango1.0-dev libx11-xcb-dev libxtst-dev libsecret-1-dev
 
     - name: Install Wails CLI
       run: go install github.com/wailsapp/wails/v2/cmd/wails@latest
@@ -66,10 +60,6 @@ jobs:
       if: matrix.os == 'windows-latest'
       run: wails build -platform windows/amd64
 
-    - name: Build Linux app
-      if: matrix.os == 'ubuntu-latest'
-      run: wails build -platform linux/amd64
-
     - name: Upload Mac artifacts
       if: matrix.os == 'macos-latest'
       uses: actions/upload-artifact@v4
@@ -86,10 +76,3 @@ jobs:
       with:
         name: weread-downloader-windows
         path: build/bin/weread_downloader.exe
-
-    - name: Upload Linux artifacts
-      if: matrix.os == 'ubuntu-latest'
-      uses: actions/upload-artifact@v4
-      with:
-        name: weread-downloader-linux
-        path: build/bin/weread_downloader-linux-amd64
